--- a/src/app/auth/components/dashboard/dashboard.component.html
+++ b/src/app/auth/components/dashboard/dashboard.component.html
@@ -1,7 +1,21 @@
 <div class="row">
   <div class="col-md-3 text-center">
-    <p>Investment</p>
+    <p>INVESTMENT</p>
     <h2>{{ investment }}</h2>
+  </div>
+  <div class="col-md-3 text-center">
+    <p>REALIZED P/L</p>
+    <h2>-</h2>
+  </div>
+
+  <div class="col-md-3 text-center">
+    <p>UNREALIZED P/L</p>
+    <h2>-</h2>
+  </div>
+
+  <div class="col-md-3 text-center">
+    <p>TOTAL P/L</p>
+    <h2>-</h2>
   </div>
 </div>
 
@@ -43,6 +57,7 @@
       <th>Price</th>
       <th>Quantity</th>
       <th>Buy/Sell</th>
+      <th>P/L</th>
       <th>Date</th>
     </tr>
   </thead>
@@ -58,6 +73,9 @@
       <td>
         {{ c.buy_sell | titlecase }}
       </td>
+      <td>
+        {{ getCDetails(c.currency_id) }}
+      </td>
       <td>{{ c.date | date: "MMMM d, y" }}</td>
     </tr>
   </tbody>
@@ -68,5 +86,10 @@
   }
   .table > thead > tr > th {
     border: 2px solid #ddd;
+  }
+  .col-md-3 {
+    float: left;
+    min-width: 25%;
+    width: 200px;
   }
 </style>
