--- a/src/app/auth/components/add-portfolio/add-portfolio.component.html
+++ b/src/app/auth/components/add-portfolio/add-portfolio.component.html
@@ -3,7 +3,7 @@
   <div class="col-md-6">
     <form [formGroup]="addForm" (ngSubmit)="submitPortfolio()">
       <input
-        type="hidden"
+        type=""
         class="form-control"
         formControlName="user_id"
         [(ngModel)]="uid"
